crates/wx-db/tests/snapshots/snapshot_parsing__snapshot_group_quote_chatusr.snap
---
source: crates/wx-db/tests/snapshot-parsing.rs
expression: result.messages
---
- sort_seq: 700
  server_id: 900007
  msg_type: 49
  sub_type: 57
  sender: wxid_test_quoter
  talker: group_test@chatroom
  create_time: 1700000700
  content:
    Quote:
      reply_text: 同意这个观点
      refer_sender: 隐藏用户
      refer_content: 这是被引用的原始消息
      refer_type: 1
      raw_xml: "<?xml version=\"1.0\"?>\n<msg>\n\t<appmsg appid=\"\" sdkver=\"0\">\n\t\t<title>同意这个观点</title>\n\t\t<type>57</type>\n\t\t<appattach>\n\t\t\t<cdnthumbaeskey />\n\t\t\t<aeskey></aeskey>\n\t\t</appattach>\n\t\t<refermsg>\n\t\t\t<type>1</type>\n\t\t\t<svrid>2041776388084106207</svrid>\n\t\t\t<fromusr>group_test@chatroom</fromusr>\n\t\t\t<chatusr>wxid_test_hidden</chatusr>\n\t\t\t<displayname>隐藏用户</displayname>\n\t\t\t<content>这是被引用的原始消息</content>\n\t\t\t<msgsource>&lt;msgsource&gt;&lt;sequence_id&gt;854104363&lt;/sequence_id&gt;&lt;/msgsource&gt;</msgsource>\n\t\t\t<createtime>1700000600</createtime>\n\t\t</refermsg>\n\t</appmsg>\n\t<fromusername>wxid_test_quoter</fromusername>\n\t<scene>0</scene>\n\t<appinfo>\n\t\t<version>1</version>\n\t\t<appname />\n\t</appinfo>\n\t<commenturl />\n</msg>"
  status: 0
- sort_seq: 701
  server_id: 900008
  msg_type: 49
  sub_type: 57
  sender: wxid_test_alice
  talker: wxid_test_bob
  create_time: 1700000701
  content:
    Quote:
      reply_text: 好的收到
      refer_sender: Bob
      refer_content: 明天见面吧
      refer_type: 1
      raw_xml: "<msg><appmsg><title>好的收到</title><type>57</type><refermsg><fromusr>wxid_test_bob</fromusr><displayname>Bob</displayname><type>1</type><content>明天见面吧</content></refermsg></appmsg></msg>"
  status: 0
