crates/wx-db/tests/snapshots/snapshot_parsing__snapshot_u64_local_type.snap
---
source: crates/wx-db/tests/snapshot-parsing.rs
assertion_line: 129
expression: result.messages
---
- sort_seq: 100
  server_id: 900001
  msg_type: 49
  sub_type: 57
  sender: wxid_test_alice
  talker: wxid_test_bob
  create_time: 1700000100
  content:
    Quote:
      reply_text: This is my reply
      refer_sender: Bob
      refer_content: "Hello, how are you?"
      refer_type: 1
      raw_xml: "<msg><appmsg><title>This is my reply</title><refermsg><fromusr>wxid_test_bob</fromusr><displayname>Bob</displayname><content>Hello, how are you?</content><type>1</type></refermsg></appmsg></msg>"
  status: 0
